# auladeploy

./: README.md  auth.py  flask_app.py  pyproject.toml  requirements.txt
static/: forromoral.css
templates/: index.html
templates_auth/: auth.html
tests/: test_app.py
